@@ -3,6 +3,7 @@ Revision history for Genealogy::Wills
 0.10
 	Fix return in scalar context
 	Validate last name
+	Fixate arrays
 
 0.09	Wed Aug  6 08:29:26 EDT 2025
 	Bump minimum version of Params::Get
